Fixed Horizontal alignment of the variants section

--- a/css/main.scss
+++ b/css/main.scss
@@ -176,7 +176,7 @@ nav{
 	
 	span a{
 		display: inline-block;
-		margin-left: 5%;
+		margin-left: 1%;
 		margin-top: 1%;
 	}
 }
@@ -185,7 +185,6 @@ nav{
 	
 	display: table;
 	margin: 0 auto;
-	padding-left: 6%;
 
 	img{
 		width: 15%;
@@ -200,7 +199,7 @@ nav{
 	padding: 2%;
 	
 	header{
-		margin-left: 5%;
+		margin-left: 1%;
 	}
 	
 	h2{
@@ -219,7 +218,7 @@ nav{
 
 #feature-block{
 	width: 50%;
-	margin-left: 30%;
+	margin-left: 29%;
 }
 
 .nav-link{
